Fixed errors in html with <code> tags. Column Gap for display at 992px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,16 +57,16 @@ footer {
 .content {
   display:grid;
   width: 100%;
-  gap: 10px 10px;
+  gap: 10px 2px;
   padding: 10px;
-  grid-template-columns: repeat(3, 350px);
+  grid-template-columns: repeat(3, 1fr);
   justify-content: space-evenly;
   align-items: flex-start;
 }
 
 /* Added rotation, box-shadow, border-radius */
 .card {
-  width: 310px;
+  width: 300px;
   border-style: dashed;
   border-width: 2px;
   border-color: var(--bordercolor);
